Bug 415033 - Opacity, brush size and blending modes are disabled in "brushes and stuff toolbar" if you close all open documents and open a new one while the "move" tool is selected
Summary: Opacity, brush size and blending modes are disabled in "brushes and stuff too...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Usability (other bugs)
Version First Reported In: 4.2.8
Platform: Other Linux
: NOR minor
Target Milestone: ---
Assignee: vanyossi
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-12-10 23:24 UTC by Partack
Modified: 2020-01-08 13:56 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Partack 2019-12-10 23:24:29 UTC
SUMMARY
Opacity, brush size and blending modes are disabled in "brushes and stuff toolbar" if you close all open documents and open a new one while the "move" tool is selected

STEPS TO REPRODUCE
1. Open or create a new document
2. Choose the move tool
3. Close the document
4. Open or create a new document

OBSERVED RESULT
Opacity, brush size and filter/blending mode are disabled/grayed out.

EXPECTED RESULT
Opening a (first)new document sets the tool to "brush" automatically so the opacity, brush size and blending modes should be available.

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: Ubuntu 18.04.3
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 5.12.5

ADDITIONAL INFORMATION

Krita
  Version: 4.2.8

Qt
  Version (compiled): 5.12.5
  Version (loaded): 5.12.5

OS Information
  Build ABI: x86_64-little_endian-lp64
  Build CPU: x86_64
  CPU: x86_64
  Kernel Type: linux
  Kernel Version: 5.0.0-37-generic
  Pretty Productname: Ubuntu 18.04.3 LTS
  Product Type: ubuntu
  Product Version: 18.04


OpenGL Info
 
  Vendor:  "NVIDIA Corporation" 
  Renderer:  "GeForce GTX 780M/PCIe/SSE2" 
  Version:  "4.6.0 NVIDIA 390.116" 
  Shading language:  "4.60 NVIDIA" 
  Requested format:  QSurfaceFormat(version 3.0, options QFlags<QSurfaceFormat::FormatOption>(DeprecatedFunctions), depthBufferSize 24, redBufferSize 8, greenBufferSize 8, blueBufferSize 8, alphaBufferSize 8, stencilBufferSize 8, samples -1, swapBehavior QSurfaceFormat::DoubleBuffer, swapInterval 0, colorSpace QSurfaceFormat::DefaultColorSpace, profile  QSurfaceFormat::CompatibilityProfile) 
  Current format:    QSurfaceFormat(version 4.6, options QFlags<QSurfaceFormat::FormatOption>(DeprecatedFunctions), depthBufferSize 24, redBufferSize 8, greenBufferSize 8, blueBufferSize 8, alphaBufferSize 8, stencilBufferSize 8, samples -1, swapBehavior QSurfaceFormat::DoubleBuffer, swapInterval 0, colorSpace QSurfaceFormat::DefaultColorSpace, profile  QSurfaceFormat::CompatibilityProfile) 
     Version: 4.6
     Supports deprecated functions true 
     is OpenGL ES: false 

QPA OpenGL Detection Info 
  supportsDesktopGL: true 
  supportsOpenGLES: true 
  isQtPreferOpenGLES: false 

Hardware Information
 Memory: 31 Gb
 Cores: 8
 Swap: /tmp
Comment 1 Ahab Greybeard 2019-12-12 13:15:45 UTC
Setting to Confirmed
Tested with 4.2.8 appimage and the Dec 09 4.3.0 prealpha appimage.

This happens with any tool which does not have various Toolbar icons active during its use.

The enabled/disabled state of the Toolbar icons is preserved even though the new document opens with the Freehand Brush Tool active.

The workaround is to select any other tool and then click back on the Brush tool.
Comment 2 vanyossi 2020-01-05 19:48:08 UTC
Git commit 7ef60648faf92eb7e7939351cfd6b75706b497b7 by Ivan Yossi.
Committed on 05/01/2020 at 19:48.
Pushed by ivany into branch 'master'.

Delay initialization of brush paintop widget state

State requires an active view in the canvas
to change widget status.

M  +7    -7    libs/ui/KisMainWindow.cpp

https://invent.kde.org/kde/krita/commit/7ef60648faf92eb7e7939351cfd6b75706b497b7
Comment 3 Halla Rempt 2020-01-08 13:56:23 UTC
Git commit dde9dd4d0d0b4148cbfebcfb64f7a76a89c884ac by Boudewijn Rempt, on behalf of Ivan Yossi.
Committed on 08/01/2020 at 13:34.
Pushed by rempt into branch 'krita/4.2'.

Delay initialization of brush paintop widget state

State requires an active view in the canvas
to change widget status.

M  +7    -7    libs/ui/KisMainWindow.cpp

https://invent.kde.org/kde/krita/commit/dde9dd4d0d0b4148cbfebcfb64f7a76a89c884ac