Delay initialization of brush paintop widget state

State requires an active view in the canvas
to change widget status.

BUG:415033