libs/ui/KisMainWindow.cpp
@@ -653,6 +653,13 @@ void KisMainWindow::showView(KisView *imageView, QMdiSubWindow *subwin)
         subwin->setOption(QMdiSubWindow::RubberBandResize, cfg.readEntry<int>("mdi_rubberband", cfg.useOpenGL()));
         subwin->setWindowIcon(qApp->windowIcon());
 
+        if (d->mdiArea->subWindowList().size() == 1) {
+            imageView->showMaximized();
+        }
+        else {
+            imageView->show();
+        }
+
         /**
          * Hack alert!
          *
@@ -674,13 +681,6 @@ void KisMainWindow::showView(KisView *imageView, QMdiSubWindow *subwin)
          */
 
         KoToolManager::instance()->initializeCurrentToolForCanvas();
-
-        if (d->mdiArea->subWindowList().size() == 1) {
-            imageView->showMaximized();
-        }
-        else {
-            imageView->show();
-        }
 
         // No, no, no: do not try to call this _before_ the show() has
         // been called on the view; only when that has happened is the
